<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        style="@style/PageTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/donate_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="14dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingHorizontal="12dp">

            <com.belyakov.vezdecode.presentation.setup.LoadPhotoView
                android:id="@+id/load"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                app:layout_constraintTop_toTopOf="parent" />

            <com.belyakov.vezdecode.presentation.setup.SetupFieldView
                android:id="@+id/setupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                app:hint="@string/donate_name"
                app:layout_constraintTop_toBottomOf="@id/load"
                app:title="@string/donate_name" />


            <com.belyakov.vezdecode.presentation.setup.SetupFieldView
                android:id="@+id/setupSum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:hint="@string/donate_regular_sum_subtitle"
                app:inputType="numbers"
                app:layout_constraintTop_toBottomOf="@id/setupName"
                app:title="@string/donate_regular_sum_title" />

            <com.belyakov.vezdecode.presentation.setup.SetupFieldView
                android:id="@+id/setupGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:hint="@string/donate_regular_goal_subtitle"
                app:layout_constraintTop_toBottomOf="@id/setupSum"
                app:title="@string/donate_goal_title" />

            <com.belyakov.vezdecode.presentation.setup.SetupFieldView
                android:id="@+id/setupDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:hint="@string/donate_description_subtitle"
                app:layout_constraintTop_toBottomOf="@id/setupGoal"
                app:title="@string/donate_description_title" />

            <com.belyakov.vezdecode.presentation.setup.SetupExpandableView
                android:id="@+id/setupWallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:hint="@string/donate_wallet_subtitle"
                app:layout_constraintTop_toBottomOf="@id/setupDescription"
                app:title="@string/donate_wallet_title" />

            <com.belyakov.vezdecode.presentation.setup.SetupExpandableView
                android:id="@+id/setupAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:hint="@string/author_name"
                app:layout_constraintTop_toBottomOf="@id/setupWallet"
                app:title="@string/donate_author" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:enabled="false"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setupAuthor"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>