<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        style="@style/PageTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/donate_extra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="14dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorGrayLight"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.belyakov.vezdecode.presentation.setup.SetupExpandableView
        android:id="@+id/extraAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="18dp"
        app:hint="@string/author_name"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:title="@string/donate_author" />

    <TextView
        android:id="@+id/extraExpireTitle"
        style="@style/SecondaryTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="26dp"
        android:text="@string/donate_expire_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/extraAuthor" />

    <RadioGroup
        android:id="@+id/extraExpireType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@id/extraExpireTitle">

        <RadioButton
            android:id="@+id/exactSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/expire_date" />

        <RadioButton
            android:id="@+id/exactDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/expire_sum" />
    </RadioGroup>

    <com.belyakov.vezdecode.presentation.setup.SetupExpandableView
        android:id="@+id/extraDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="28dp"
        android:visibility="gone"
        app:hint="@string/donate_date_subtitle"
        app:layout_constraintTop_toBottomOf="@id/extraExpireType"
        app:title="@string/donate_date_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:enabled="false"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>