<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        style="@style/PageTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/donate_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="14dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorGrayLight"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.belyakov.vezdecode.presentation.start.DonateTypeView
        android:id="@+id/targetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        app:icon="@drawable/ic_target"
        app:layout_constraintBottom_toTopOf="@id/regularButton"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:subTitle="@string/donate_target_subtitle"
        app:title="@string/donate_target"
        app:layout_constraintVertical_chainStyle="packed"/>

    <com.belyakov.vezdecode.presentation.start.DonateTypeView
        android:id="@+id/regularButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        app:icon="@drawable/ic_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/targetButton"
        app:subTitle="@string/donate_regular_subtitle"
        app:title="@string/donate_regular" />
</androidx.constraintlayout.widget.ConstraintLayout>