<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:paddingBottom="12dp">

    <ImageView
        android:id="@+id/personIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/avatar_second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fakePersonName"
        style="@style/NormalTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/fake_name"
        app:layout_constraintStart_toEndOf="@id/personIcon"
        app:layout_constraintTop_toTopOf="@id/personIcon"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/time"
        style="@style/SecondaryTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/fake_time"
        app:layout_constraintBottom_toBottomOf="@id/personIcon"
        app:layout_constraintStart_toEndOf="@id/personIcon"
        app:layout_constraintTop_toBottomOf="@id/fakePersonName" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_dots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fakeText"
        style="@style/NormalTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/fake_text"
        app:layout_constraintTop_toBottomOf="@id/personIcon" />

    <ImageView
        android:id="@+id/fakeImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="12dp"
        android:scaleType="fitXY"
        android:src="@drawable/fake_image"
        app:layout_constraintTop_toBottomOf="@id/fakeText" />

    <TextView
        android:id="@+id/like"
        style="@style/HintTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/ic_like"
        android:drawablePadding="8dp"
        android:text="@string/fake_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fakeImage" />

    <TextView
        android:id="@+id/comment"
        style="@style/HintTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/ic_comment"
        android:drawablePadding="8dp"
        android:text="@string/fake_like"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toBottomOf="@id/fakeImage" />

    <TextView
        android:id="@+id/share"
        style="@style/HintTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/ic_share"
        android:drawablePadding="8dp"
        android:text="@string/fake_share"
        app:layout_constraintStart_toEndOf="@id/comment"
        app:layout_constraintTop_toBottomOf="@id/fakeImage" />

    <TextView
        android:id="@+id/watch"
        style="@style/HintTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:drawableLeft="@drawable/ic_watch"
        android:drawablePadding="8dp"
        android:text="@string/fake_watch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fakeImage" />
</androidx.constraintlayout.widget.ConstraintLayout>