<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:paddingBottom="12dp">

    <ImageView
        android:id="@+id/personIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/personName"
        style="@style/NormalTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/fake_name1"
        app:layout_constraintStart_toEndOf="@id/personIcon"
        app:layout_constraintTop_toTopOf="@id/personIcon"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/time"
        style="@style/SecondaryTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/fake_time"
        app:layout_constraintBottom_toBottomOf="@id/personIcon"
        app:layout_constraintStart_toEndOf="@id/personIcon"
        app:layout_constraintTop_toBottomOf="@id/personName" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_dots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text"
        style="@style/NormalTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/personIcon"
        tools:text="@string/fake_text" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/donateCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="14dp">

            <ImageView
                android:id="@+id/donatePicture"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/donateTitle"
                style="@style/TitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/donatePicture"
                tools:text="Добряши помогают котейкам" />

            <TextView
                android:id="@+id/donateAuthor"
                style="@style/SecondaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donateTitle"
                tools:text="Матвей Правосудов" />

            <TextView
                android:id="@+id/dotDivider"
                style="@style/SecondaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/dot_divider"
                app:layout_constraintStart_toEndOf="@id/donateAuthor"
                app:layout_constraintTop_toBottomOf="@id/donateTitle" />

            <TextView
                android:id="@+id/donateExpire"
                style="@style/SecondaryTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/dotDivider"
                app:layout_constraintTop_toBottomOf="@id/donateTitle"
                tools:text="Помощь нужна каждый месяц" />

            <View
                android:id="@+id/donateDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorGrayLight"
                app:layout_constraintTop_toBottomOf="@id/donateExpire" />

            <TextView
                android:id="@+id/donateProgressTitle"
                style="@style/SecondaryTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/donate_first"
                android:textColor="@color/colorBlack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donateDivider" />

            <ProgressBar
                android:id="@+id/donateProgress"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/d_progress"
                app:layout_constraintEnd_toStartOf="@id/helpButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donateProgressTitle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/helpButton"
                style="@style/OutlinedButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/help"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donateDivider" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/like"
        style="@style/HintTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/ic_like"
        android:drawablePadding="8dp"
        android:text="@string/fake_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donateCard" />

    <TextView
        android:id="@+id/comment"
        style="@style/HintTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/ic_comment"
        android:drawablePadding="8dp"
        android:text="@string/fake_like"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toBottomOf="@id/donateCard" />

    <TextView
        android:id="@+id/share"
        style="@style/HintTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/ic_share"
        android:drawablePadding="8dp"
        android:text="@string/fake_share"
        app:layout_constraintStart_toEndOf="@id/comment"
        app:layout_constraintTop_toBottomOf="@id/donateCard" />

    <TextView
        android:id="@+id/watch"
        style="@style/HintTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:drawableLeft="@drawable/ic_watch"
        android:drawablePadding="8dp"
        android:text="@string/fake_watch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donateCard" />
</androidx.constraintlayout.widget.ConstraintLayout>